ezdm (0.0.7ubuntu1) quantal; urgency=low

  * master Delete old weapons entries to make room for new inventory
    system

 -- A.J. Venter <ajventer@gmail.com>  Mon, 18 Mar 2013 06:24:07 +0200

ezdm (0.0.7) quantal; urgency=low

  * master Character sheet editor

 -- A.J. Venter <ajventer@gmail.com>  Sun, 17 Mar 2013 19:19:32 +0200

ezdm (0.0.6ubuntu5) quantal; urgency=low

  * master Conditional template entries

 -- A.J. Venter <ajventer@gmail.com>  Sun, 17 Mar 2013 13:27:35 +0200

ezdm (0.0.6ubuntu4) quantal; urgency=low

  * master Syntax error fixed

 -- A.J. Venter <ajventer@gmail.com>  Sun, 17 Mar 2013 12:45:19 +0200

ezdm (0.0.6ubuntu3) quantal; urgency=low

  * master Ability charts coming along

 -- A.J. Venter <ajventer@gmail.com>  Sun, 10 Mar 2013 15:24:00 +0200

ezdm (0.0.6ubuntu2) quantal; urgency=low

  * stable Undo

 -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 13:05:57 +0200

ezdm (0.0.6ubuntu1) quantal; urgency=low

  * master - Desktop menus finally working

 -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 12:05:13 +0200

ezdm (0.0.6) quantal; urgency=low

  * master - Code-checking

 -- A.J. Venter <ajventer@gmail.com>  Sat, 02 Mar 2013 11:47:30 +0200

ezdm (0.0.5ubuntu2) quantal; urgency=low

  * master - Fixed tryexec path

 -- A.J. Venter <ajventer@gmail.com>  Fri, 01 Mar 2013 01:15:23 +0200

ezdm (0.0.5ubuntu1) quantal; urgency=low

  * master - Improved desktop file handling

 -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 23:43:21 +0200

ezdm (0.0.5) quantal; urgency=low

  * Non-maintainer upload.
  * master - Added desktop icon

 -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 21:54:41 +0200

ezdm (0.0.4ubuntu1+nmu1) UNRELEASED; urgency=low

  * Non-maintainer upload.
  * 0.0.5

 -- A.J. Venter <silentcoder@ravenriley>  Thu, 28 Feb 2013 21:53:39 +0200

ezdm (0.0.4ubuntu1) quantal; urgency=low

  * master - Added debhelper tokens

 -- A.J. Venter <ajventer@gmail.com>  Thu, 28 Feb 2013 14:48:33 +0200
