@@ -1,0 +1,32 @@
+#!/usr/bin/env python
+#First version limited automation
+import sys
+import os
+from simplejson import loads,dumps
+from ezdm_libs.util import smart_input,load_json,json_from_template,highlight,say
+from ezdm_libs.item import Item,list_items
+
+
+
+if __name__=='__main__': 
+    save='n'
+    old = {}
+    while not 'y' in save.lower():
+        highlight("EZDM item creator")
+        template=load_json('adnd2e','template_item')
+        if len(old) == 0:
+            basedir="weapon"
+            load=smart_input("Load defaults from existing item",validentries=["y","n"],default='y')
+            if load == "y":
+                itemlist=list_items()
+                name=smart_input("%s "%(basedir),upper=True,validentries=itemlist.keys())
+                old=load_json(basedir,itemlist[name])
+        
+        item=Item(json_from_template(template=template['core'],old=old,conditional=template['conditional']))    
+        say(item.json)
+        save=smart_input("Save this %s ?" %(basedir.rstrip('s')),default="n",validentries=["y","n"],lower=True)
+        if 'y' in save:
+            item.save()
+        else:
+            old=item.json
+                
