@@ -1,10 +1,0 @@
-{"class.parent=rogue":{
-        "pick pockets":15,
-        "open locks": 10,
-        "find/remove traps":5,
-        "move silently":10,
-        "detect noise":15,
-        "climb walls":60,
-        "read languages":0
-    }
-}
